# SocialMediaSchedulingTool

./: .env.example  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  setup-garage-android.md  tsconfig.json  vercel.json
.agents_tmp/: PLAN.md
prisma/: schema.prisma  seed.ts
src/: auth.ts  middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  sitemap.ts
src/app/about/: metadata.ts  page.tsx
src/app/admin/: metadata.ts  page.tsx
src/app/analytics/: metadata.ts  page.tsx
src/app/bio/: metadata.ts  page.tsx
src/app/calendar/: metadata.ts  page.tsx
src/app/contact/: page.tsx
src/app/dashboard/: metadata.ts  page.tsx
src/app/login/: metadata.ts  page.tsx
src/app/media-library/: metadata.ts  page.tsx
src/app/pending/: metadata.ts  page.tsx
src/app/pipeline/: metadata.ts  page.tsx
src/app/privacy-policy/: metadata.ts  page.tsx
src/app/production-calendar/: metadata.ts  page.tsx
src/app/queue/: metadata.ts  page.tsx
src/app/seo/: metadata.ts  page.tsx
src/app/series/: metadata.ts  page.tsx
src/app/settings/: metadata.ts  page.tsx
src/app/terms-and-conditions/: metadata.ts  page.tsx
src/desktop-agent/: App.tsx  index.html  package.json  styles.css  vite.config.ts
src/lib/: auth.ts  constants.ts  storage.ts
src/stores/: analyticsStore.ts  index.ts  organizationStore.ts  platformStore.ts  postsStore.ts
src/types/: index.ts  next-auth.d.ts
(+60 files in other folders)
